Add mongodb support

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,10 @@
 <h1>Example App: Home</h1>
 
+
+<div>
+    We currently have {{userCount}} users.
+    
+</div>
 <div> 
 
     <form class = "login-form" action ="/user/login">
